--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-light bg-light d-flex">
       <div class="container">
         <div class="logo">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="<%= root_path%>">
             <%= fa_stacked_icon "camera inverse", base: "circle"%>
             SNAPPOST
           </a>
@@ -28,7 +28,7 @@
           <a><i class="fa fa-compass"></i></a>
           <a><i class="fa fa-heart"></i></a>
           <% if user_signed_in? %>
-            <a href="<%= destroy_user_session_path%>" data-method="delete">
+            <a href="<%= user_path(current_user)%>">
               <i class="fa fa-user"></i>
             </a>
           <% else %>
