--- a/app/views/posts/_comment_list.html.erb
+++ b/app/views/posts/_comment_list.html.erb
@@ -1,7 +1,7 @@
 <% post.comments.each do |comment| %>
   <div class="mb-2">
     <% if comment.user == current_user %>
-      <%= link_to "", post_comment_path(post.id, comment), method: :delete, remote: true, class: "delete-comment" %>
+      <%= link_to "", post_comment_path(post.id, comment), method: :delete, remote: true, class: "fas fa-times" %>
     <% end %>
     <span>
       <strong>
