--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,4 +1,4 @@
 $('#like-icon-post-<%= @post.id.to_s %>').
-  html('<%= link_to "いいね", post_like_path(@post.id, @like), method: :DELETE, remote: true, class: "loved hide-text" %>');
+  html('<%= link_to "", post_like_path(@post.id, @like), method: :DELETE, remote: true, class: "fa fa-heart fa-2x like-btn" %>');
 $('#like-text-post-<%= @post.id.to_s %>').
   html('<%= j render "posts/like_text", { likes: @post.likes } %>');
