--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -1,4 +1,4 @@
 $('#like-icon-post-<%= @post.id.to_s %>').
-  html('<%= link_to "いいねを取り消す", post_likes_path(@post), method: :POST, remote: true, class: "love hide-text" %>');
+  html('<%= link_to "", post_likes_path(@post), method: :POST, remote: true, class: "fa fa-heart-o fa-2x like-btn-unlike" %>');
 $('#like-text-post-<%= @post.id.to_s %>').
   html('<%= j render "posts/like_text", { likes: @post.likes } %>');
