--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
 
           <% if post.user_id == current_user.id %>
             <%= link_to post_path(post), method: :delete, class: "ml-auto mx-0 my-auto" do %>
-              <div class="delete-post-icon">
+              <div class="fa fa-trash">
               </div>
             <% end %>
           <% end %>
@@ -25,22 +25,29 @@
 
         <div class="card-body">
           <div class="row parts">
+
             <div id="like-icon-post-<%= post.id.to_s %>">
               <% if post.liked_by(current_user).present? %>
-                <%= link_to "いいねを取り消す", post_like_path(post.id, post.liked_by(current_user)), method: :DELETE, remote: true, class: "loved hide-text" %>
+                <%= link_to "", post_like_path(post.id, post.liked_by(current_user)), method: :DELETE, remote: true, class: "fa fa-heart fa-2x like-btn" %>
               <% else %>
-                <%= link_to "いいね", post_likes_path(post), method: :POST, remote: true, class: "love hide-text" %>
+                <%= link_to "", post_likes_path(post), method: :POST, remote: true, class: "fa fa-heart fa-2x like-btn-unlike" %>
               <% end %>
             </div>
-            <%= link_to "", post_path(post), class: "comment" %>
+
+            <%= link_to "", post_path(post), class: "fa fa-comment fa-2x" %>
+
+            <%= link_to "", post_path(post), class: "fa fa-paper-plane fa-2x" %>
           </div>
+
           <div id="like-text-post-<%= post.id.to_s %>">
             <%= render "like_text", { likes: post.likes } %>
           </div>
+
           <div>
             <span><strong><%= post.user.name %></strong></span>
             <span><%= post.caption %></span>
             <%= link_to time_ago_in_words(post.created_at).upcase + "前", post_path(post), class: "post-time no-text-decoration" %>
+
             <div id="comment-post-<%= post.id.to_s %>">
               <%= render 'comment_list', { post: post } %>
             </div>
@@ -54,9 +61,11 @@
                 <%= f.text_field :comment, class: "form-control comment-input border-0", placeholder: "コメント ...", autocomplete: :off %>
               <% end %>
             </div>
+            
           </div>
         </div>
       </div>
     </div>
   </div>
 <% end %>
+
