--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -34,9 +34,9 @@
               <% end %>
             </div>
 
-            <%= link_to "", post_path(post), class: "fa fa-comment fa-2x" %>
+            <%= link_to "", post_path(post), class: "fa fa-comment-o fa-2x" %>
 
-            <%= link_to "", post_path(post), class: "fa fa-paper-plane fa-2x" %>
+            <%= link_to "", post_path(post), class: "fa fa-paper-plane-o fa-2x" %>
           </div>
 
           <div id="like-text-post-<%= post.id.to_s %>">
