--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -38,7 +38,7 @@
   color: black;
 }
 
-.fa-comment {
+.fa-comment-o {
   margin-left: 8px;
   background-repeat: no-repeat;
   height: 36px;
@@ -47,7 +47,7 @@
   color: black;
 }
 
-.fa-paper-plane {
+.fa-paper-plane-o {
   margin-left: 8px;
   background-repeat: no-repeat;
   height: 36px;
