--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,7 +30,7 @@
               <% if post.liked_by(current_user).present? %>
                 <%= link_to "", post_like_path(post.id, post.liked_by(current_user)), method: :DELETE, remote: true, class: "fa fa-heart fa-2x like-btn" %>
               <% else %>
-                <%= link_to "", post_likes_path(post), method: :POST, remote: true, class: "fa fa-heart fa-2x like-btn-unlike" %>
+                <%= link_to "", post_likes_path(post), method: :POST, remote: true, class: "fa fa-heart-o fa-2x like-btn-unlike" %>
               <% end %>
             </div>
 
