--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "layouts/navbar";
 @import "font-awesome";
 @import "common";
+@import "users";
 @import "users/devise";
 @import "users/show";
 @import "users/edit";
