--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
           </form>
         </div>
         <div class="user-section">
-          <%= link_to "投稿", new_post_path, class: "btn btn-primary" %>
+          <%= link_to "post", new_post_path, class: "btn btn-primary" %>
           <a><i class="fa fa-compass"></i></a>
           <a><i class="fa fa-heart"></i></a>
           <% if user_signed_in? %>
