--- a/app/assets/stylesheets/users/edit.scss
+++ b/app/assets/stylesheets/users/edit.scss
@@ -1,13 +1,51 @@
-.profile-form-wrap {
-  background: #fff;
-  padding: 20px;
-  border: 1px solid #e6e6e6;
+.actions{
+  width: 220px;
+  border: 1px solid #dbdbdb;
+.nav-link{
+    font-size: 14px;
+    background-color: white;
+    color: black;
+    border-radius: 0;
+    padding: 12px 0 12px 30px;
+    &:hover{
+      cursor: pointer;
+    }
+  }
+  .nav-pills .nav-link.active{
+    border-left: 2px solid;
+    font-weight: 600;
+  }
 }
 
-.profile-form-wrap label {
-  font-weight: bold;
-}
-
-.edit-profile-wrapper {
-  margin-top: 60px;
+.form-edit-user{
+  padding: 30px 100px 10px 50px;
+.form-group, input{
+    font-size: 14px;
+    color: black;
+  }
+  input, textarea{
+    border: 1px solid #efefef;
+  }
+  .col-form-label{
+    text-align: right;
+    font-weight: 600;
+  }
+.avatar{
+    height: 38px;
+    width: 38px;
+    border-radius: 50%;
+  }
+  .username{
+    font-size: 20px;
+    line-height: 22px;
+    margin-bottom: 0;
+  }
+  .change-photo{
+    color: #3897f0;
+    text-decoration: none;
+    font-size: 13px;
+  }
+  input[type='submit']{
+    color: white;
+  }
 }
