--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -1,32 +1,99 @@
-.profile-wrap{
-  margin:40px 0px;
+.profile .avatar{
+  .wrapper{
+    width: 140px;
+    height: 140px;
+    margin: 40px auto;
+  }
+  .wrapper img{
+    width: 100%;
+    border-radius: 50%;
+  }
 }
 
-.round-img{
-  border-radius:50%;
-  width: 120px;
-  height: 120px;
+.profile .basic-info{
+  padding: 40px 0;
+  .user-wrapper{
+    display: flex;
+  }
+  .username{
+    font-size: 30px;
+    line-height: 40px;
+    font-weight: 200;
+  }
+  .edit-profile{
+    margin-left: 20px;
+    margin-top: 5px;
+  }
+  .edit-profile button{
+    background-color: transparent;
+    border-radius: 5px;
+    border: 1px solid #dbdbdb;
+    color: #262626;
+    font-size: 14px;
+    padding: 4px 10px;
+    font-weight: 500;
+  }
+  ul.posts{
+    padding-left: 0;
+    > li{
+      display: inline;
+      padding-right: 40px;
+      font-size: 15px;
+      span{
+        color: #262626;
+        font-weight: 600;
+      }
+    }
+  }
+  .name{
+    font-size: 15px;
+    font-weight: 600;
+  }
+  .website{
+    color: #003569;
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 600;
+  }
 }
 
-.edit-profile-btn {
-  margin: 15px 0 0 15px;
-  font-weight: bold;
-  height: 26px;
-  line-height: 26px;
-  padding: 0 26px;
-  border-color: #dbdbdb;
-  font-size: 14px;
+.user-tabs{
+  border-top: 1px solid #efefef;
+  display: flex;
+  justify-content: center;
+a.tab{
+    height: 35px;
+    margin-right: 50px;
+    line-height: 45px;
+    color: #999;
+    font-size: 12px;
+    font-weight: 500;
+    text-align: center;
+    i{
+      padding-right: 1px;
+    }
+    &:hover{
+      text-decoration: none;
+    }
+  }
+  a.active{
+    border-top: 1px solid #262626;
+    color: #262626;
+  }
 }
 
-.fa-sign-out {
-  background-repeat: no-repeat;
-  height: 24px;
-  width: 24px;
-  background-color: transparent;
-  margin: 18px 0 0 10px;
-  background-size: 22px!important;
-  border: none;
-  &:hover {
-    cursor: pointer;
+.user-images{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 20px;
+.wrapper{
+    width: 280px;
+    height: 280px;
+    margin: 15px;
+    img{
+      width: 100%;
+      border-radius: 4%;
+    }
   }
 }
