--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,32 +1,77 @@
-<div class="col-md-offset-2 mb-4 edit-profile-wrapper">
-  <div class="row">
-    <div class="col-md-8 mx-auto">
-      <div class="profile-form-wrap">
-        <%= form_with scope: resource, as: resource_name, url: registration_path(resource_name), local: true, method: :patch do |f| %>
-          <div class="form-group">
-            <%= f.label :name, "名前" %>
-            <%= f.text_field :name, autofocus: true, class: "form-control" %>
-          </div>
-
-          <div class="form-group">
-            <%= f.label :email, "メールアドレス" %>
-            <%= f.email_field :email, autofocus: true, class: "form-control" %>
-          </div>
-
-          <div class="form-group">
-            <%= f.label :password, "パスワード" %>
-            <%= f.password_field :password, autofocus: "off", class: "form-control" %>
-          </div>
-
-          <div class="form-group">
-            <%= f.label :password_confirmation, "パスワードの確認" %>
-            <%= f.password_field :password_confirmation, autofocus: "off", class: "form-control" %>
-          </div>
-
-          <%= f.submit "変更する", class: "btn btn-primary" %>
-        <% end %>
-      </div>
+<div class="user-edit-page">
+  <div class="actions">
+    <div class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
+      <a class="nav-link active" data-toggle="pill" href="#v-pills-home" role="tab" aria-selected="true">Edit Profile</a>
+      <a class="nav-link" data-toggle="pill">Change Password</a>
+      <a class="nav-link" data-toggle="pill">Authorized Applications</a>
+      <a class="nav-link" data-toggle="pill">Email and SMS</a>
+      <a class="nav-link" data-toggle="pill">Manage Contacts</a>
+      <a class="nav-link" data-toggle="pill">Privacy and Security</a>
+      <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: "nav-link" %>
+    </div>
+  </div>
+  <div class="details tab-content">
+    <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+      <%= form_with model: current_user,url: registration_path(resource_name), local: true, html: {class: "form-horizontal form-edit-user"} do |f| %>
+  <div class="form-group row">
+    <div class="col-sm-3 col-form-label">
+      <img class="avatar" src="https://instuigram-avatar.jpg">
+    </div>
+    <div class="col-sm-9">
+      <p class="name"><%=current_user.name %></p>
+      <a class="change-photo" href="">Change Profile Photo</a>
+    </div>
+  </div>
+  <div class="form-group row">
+    <%= f.label :name, class: 'col-sm-3 col-form-label' %>
+    <div class="col-sm-9">
+      <%= f.text_field :name, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group row">
+    <%= f.label :username, class: 'col-sm-3 col-form-label' %>
+    <div class="col-sm-9">
+      <%= f.text_field :username, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group row">
+    <%= f.label :website, class: 'col-sm-3 col-form-label' %>
+    <div class="col-sm-9">
+      <%= f.text_field :website, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group row">
+    <%= f.label :bio, class: 'col-sm-3 col-form-label' %>
+    <div class="col-sm-9">
+      <%= f.text_area :bio, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group row">
+    <%= f.label :email, class: 'col-sm-3 col-form-label' %>
+    <div class="col-sm-9">
+      <%= f.text_field :email, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group row">
+    <%= f.label :phone, class: 'col-sm-3 col-form-label' %>
+    <div class="col-sm-9">
+      <%= f.text_field :phone, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group row">
+    <%= f.label :gender, class: 'col-sm-3 col-form-label' %>
+    <div class="col-sm-9">
+      <%= f.text_field :gender, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group row">
+    <div class="col-sm-3">
+    </div>
+    <div class="col-sm-9">
+      <%= f.submit "Submit", class: 'btn btn-primary' %>
+    </div>
+  </div>
+<% end %>
     </div>
   </div>
 </div>
-
