--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class="profile row">
     <div class="col-md-4 avatar">
       <div class="wrapper">
-        <img src="https://instuigram-avatar.jpg">
+        
       </div>
     </div>
     
@@ -13,44 +13,26 @@
           <button>Edit Profile</button>
         </a>
       </div>
-      <ul class="posts">
-        <li><span>12</span> posts</li>
-        <li><span>195</span> followers</li>
-        <li><span>345</span> following</li>
-      </ul>
-      <h2 class="name"><%= current_user.name %></h2>
+        <table>
+          <% if @user == current_user %>
+            <tr>
+              <th>Username</th><td><%= @user.username %></td>
+            </tr>
+
+            <tr>
+              <th>Email</th><td><%= @user.email %></td>
+            </tr>
+
+            <tr>
+              <th>Phone</th><td><%= @user.phone %></td>
+            </tr>
+
+            <tr>
+              <th>Gender</th><td><%= @user.gender %></td>
+            </tr>
+          <% end %>
+        </table>
     </div>
-  </div>
-</div>
-
-<div class="user-tabs">
-  <a class="tab active" href="">
-    <i class="fa fa-th"></i>
-    POSTS
-  </a>
-  <a class="tab" href="">
-    <i class="fa fa-tv"></i>
-    IGTV
-  </a>
-  <a class="tab" href="">
-    <i class="fa fa-bookmark"></i>
-    SAVED
-  </a>
-  <a class="tab" href="">
-    <i class="fa fa-tag"></i>
-    TAGGED
-  </a>
-</div>
-
-<div class="user-images">
-  <div class="wrapper">
-    <img src="your_image_url">
-  </div>
-  <div class="wrapper">
-    <img src="your_image_url">
-  </div>
-  <div class="wrapper">
-    <img src="your_image_url">
   </div>
 </div>
 
